Change overflow-x on equations to auto to prevent empty scroll bars

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -152,5 +152,5 @@ table {
 }
 
 mjx-container {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
